--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,117 @@
 body {
+  font-family: "Open Sans", "sarif";
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper{
+  background: linear-gradient(#7b7b7b, #5ccab5);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.main{
+  height: 90vh;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.form-container{
+  background-color: #2c5046;
+  height: 70vh;
+  padding-top: 100px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin: auto;
+}
+
+input[type="text"]{
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 1px #FFF;
+  width: 100%;
+  display: block;
+  padding: 8px;
+  color: #FFF !important;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  font-size: 20px;
+}
+
+input[type= "text"] {
+  outline: none;
+}
+
+button{
+  border: 0;
+  padding: 8px 20px;
+  margin: 0 2px;
+  border-radius: 2px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 15px;
+  cursor: pointer;
+  background-color: #000;
+  color: #FFF;
+  font-weight: 100;
+  transition: all .5s;
+}
+
+button:hover{
+  background-color: #FFF;
+  color: #000;
+}
+
+button:active{
+  outline: none;
+}
+
+.info{
+  width: 100%;
+  font-size: 20px;
+  font-weight: 200;
+  letter-spacing: 2px;
+}
+
+.info_key{
+  color: #FFF;
+  border-bottom: solid 2px rgba(255, 255, 255, 0.06);
+  font-weight: 400;
+}
+
+.info_key:last-child{
+  border: 0;
+}
+
+.info_value{
+  color: #FFF;
+  font-weight: 200;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
